2002-09-19  Joel Rosdahl  <joel@rosdahl.net>

	* swedish-strings.el, english-strings.el: Added missing group in
	regexps comment-prefix and footnote-prefix.

2002-09-18  David Byers  <david.byers@swipnet.se>

	Fix bug 762:
	* commands2.el (kom-set-motd): Rewrote using blocking commands.
	The old code didn't really work. Also pick recipients for the text
	correctly.

	Fix bug 763:
	* edit-text.el (lyskom-looking-at-header): Changed from match
	number 1 to match number 2 because we need that for english
	strings. 

	Fix bug 522:
	* startup.el (lyskom): Print motd of lyskom sort of like a normal
	text. Don't print the header because it distracts attention. Do
	print the footer using whatever settings are currently loaded
	(usually the defaults).

	Fix bug 757:
	* compatibility.el (make-temp-file): Removed last argument from
	write-region since the parameter lists in Gnu Emacs and XEmacs
	differed.

2002-09-17  David Byers  <david.byers@swipnet.se>

	* Release av 0.47.1-BETA-1

2002-09-16  David Byers  <david.byers@swipnet.se>

	* vars.el.in (lyskom-old-farts-text-prompt-strategy): Added this
	as alias for kom-old-farts-text-prompt-strategy.

	Fix bug 722:
	* edit-text.el (kom-edit-send-anonymous): Set is-anonymous
	parameter to non-nil.
	(lyskom-edit-send): Ask to remove self when sending anonymously. 

	Fix bug 679:
	* commands1.el (kom-delete-text): Nag if the user tries to delete
	a text with comments. Rewrote the main logic.

2002-09-15  David Byers  <david.byers@swipnet.se>

	Fix bug 733:
	* utilites.el (lyskom-read-text-no-prefix-arg): Moved cond branch
	for prompting when there is no prefix argument to the first
	branch so that errors occurring when looking for texts for a
	command that always prompts will not be signalled.

	kom-write-footnote footnoted the wrong text:
	* utilities.el (lyskom-read-text-no-prefix-arg): Use default
	parameter as default in prompt when the command is specified to
	always prompt.
